--- a/templates/login.html
+++ b/templates/login.html
@@ -8,13 +8,10 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
 {% block content %}
-    <form method="post" class="swoy-container" id="signup" action="{{url_for('signup')}}">
+    <form method="post" class="swoy-container" id="signup" action="{{url_for('login')}}">
         {{ form.csrf_token }}
         <div class="form-group col">
-            <h2>Sign up</h2>
-        </div>
-        <div class="form-group col">
-            {{render_field(form.username, class="form-control", placeholder="Tom")}}
+            <h2>Login</h2>
         </div>
         <div class="form-group col">
             {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
@@ -22,13 +19,12 @@
         <div class="form-group col">
             {{render_field(form.password, class="form-control", placeholder="secret")}}
         </div>
-        <div class="form-group col">
-            {{render_field(form.confirm, class="form-control", placeholder="Repeat Password")}}
-        </div>
+        {% if error %}
+            <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">Either the email or password is wrong.</p>
+        {% endif %}
         <div class="text-center">
             <button type="submit" class="btn btn-primary btn-block">Submit</button>
         </div>
     </form>
 
 {% endblock %}
-
