--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -20,7 +20,7 @@
             {{render_field(form.security_ans, class="form-control")}}
         </div>
         {% if error %}
-            <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">Oops. Something went wrong.</p>
+            <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">{{ error }}</p>
         {% endif %}
         <div class="text-center">
             <button type="submit" class="swoy-btn btn btn-primary btn-block">Enter</button>
