--- a/templates/forgot_password_EMAIL.html
+++ b/templates/forgot_password_EMAIL.html
@@ -17,7 +17,7 @@
             {{render_field(form.email, class="form-control")}}
         </div>
         {% if error %}
-            <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">Oops. Something went wrong.</p>
+            <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">{{ error }}</p>
         {% endif %}
         <div class="text-center">
             <button type="submit" class="swoy-btn btn btn-primary btn-block">Submit</button>
