fixed xml vulnerability

--- a/templates/admin_order_details.html
+++ b/templates/admin_order_details.html
@@ -48,4 +48,7 @@
         </div>
     </div>
 </div>
+    <div style="margin:20px">
+        <p style="color:red">{{error}}</p>
+    </div>
 {% endblock %}
