--- a/templates/home.html
+++ b/templates/home.html
@@ -48,6 +48,9 @@
         </div>
     </div>
     {% endif %}
+        <div style="margin:20px">
+        <p style="color:red">{{error}}</p>
+    </div>
 </main>
 
 {% endblock %}
