--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -63,5 +63,8 @@
         </div>
     </div>
 </div>
+    <div style="margin:20px">
+        <p style="color:red">{{error}}</p>
+    </div>
 {% endblock %}
 
