--- a/templates/admin_menu_toppings.html
+++ b/templates/admin_menu_toppings.html
@@ -22,6 +22,7 @@
             </article>
         </div>
         {% endfor %}
+        {% if error == "" %}
         <div class="col-md-4" style="margin-bottom:25px;">
             <article class="media content-section">
                 <div class="media-body">
@@ -33,5 +34,20 @@
                 </div>
             </article>
         </div>
+        {% else %}
+        <div class="col-md-4" style="margin-bottom:25px;">
+            <article class="media content-section">
+                <div class="media-body">
+                        <div class=" swoy-card card" style="text-align:center;">
+                            <i class="fas fa-plus-circle add" style="font-size: 100px; padding-top:115px; padding-bottom:115px;"></i>
+                        </div>
+                    </a>
+                </div>
+            </article>
+        </div>
+        {% endif %}
+    </div>
+    <div style="margin:20px">
+        <p style="color:red">{{error}}</p>
     </div>
 {% endblock %}
