--- a/templates/admin_order_details.html
+++ b/templates/admin_order_details.html
@@ -42,7 +42,7 @@
         <hr>
         <hr>
         <div>
-            <a href="{{ url_for('clear_admin_orders', order_id=order_id, id=user_account[0]) }}" style="text-decoration:none;">
+            <a href="{{ url_for('clear_admin_orders', order_id=order_id) }}" style="text-decoration:none;">
                 <button class="swoy-btn btn btn-primary btn-block">Mark as Delivered</button>
             </a>
         </div>
