--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -11,7 +11,7 @@
 <div>
     <div style="margin: 100px;">
         <div class="container-fluid swoy-container swoy-form-container">
-            <form method="post" class="swoy-container" action="{{ url_for('password', id=user_account[0]) }}">
+            <form method="post" class="swoy-container" action="{{ url_for('password') }}">
                 {{ password_form.csrf_token }}
                 <div class="form-group col">
                     {{render_field(password_form.current_pwd, class="form-control")}}
