--- a/templates/admin_menu_drinks_add.html
+++ b/templates/admin_menu_drinks_add.html
@@ -2,7 +2,7 @@
 {% from "formhelper.html" import render_field %}
 
 {% block content %}
-    <form method="post" action="{{ url_for('admin_menu_drinks_add', id=user_account[0]) }}" enctype="multipart/form-data">
+    <form method="post" action="{{ url_for('admin_menu_drinks_add') }}" enctype="multipart/form-data">
         {{ form.csrf_token }}
         <div class="form-group col">
             <h2>Add</h2>
