--- a/templates/admin_menu_toppings.html
+++ b/templates/admin_menu_toppings.html
@@ -6,14 +6,14 @@
             <article class="media content-section">
                 <div class="media-body">
                     <div class=" swoy-card card">
-                        <a href="{{ url_for('admin_menu_toppings_modify', topping_id=item.id, id=user_account[0]) }}" style="text-decoration:none;">
+                        <a href="{{ url_for('admin_menu_toppings_modify', topping_id=item.id) }}" style="text-decoration:none;">
                             {% if item.image != None %}
                                 <img class="card-img-top responsive" src="../static/{{ item.image }}" alt="No image">
                             {% else %}
                                 <img class="card-img-top responsive" src="../static/noimage.png" alt="No image">
                             {% endif %}
                             <div class="card-body" style="color:black;">
-                                <span class="card-text product-caption">{{ item.name|safe }}</span>
+                                <span class="card-text product-caption">{{ item.name }}</span>
                                 <span style="float:right;">$ {{ item.price }}</span>
                             </div>
                         </a>
