--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
             <li class="nav-item active">
                 <div class="dropdown-user">
                     <button style="min-width: 180px;" class="btn btn-navbar swoy-btn my-2 my-sm-0 dropbtn">{{
-                        user_account[1]
+                        user_account[1] | safe
                         }}
                         <i class="fa fa-caret-down"></i>
                     </button>
