--- a/templates/admin_admin_accounts.html
+++ b/templates/admin_admin_accounts.html
@@ -12,9 +12,9 @@
   <tbody>
     {% for user in userList %}
     <tr>
-      <th scope="row">{{user.id}}</th>
-      <td>{{user.username}}</td>
-      <td>{{user.email}}</td>
+      <th scope="row">{{ user.id }}</th>
+      <td>{{ user.username | safe }}</td>
+      <td>{{ user.email | safe }}</td>
         {% if session["user"][0] == 2 %}
             {% if user.id != 2 %}
                     <td>
