--- a/templates/admin_order_details.html
+++ b/templates/admin_order_details.html
@@ -17,11 +17,11 @@
             {% for item in order_items %}
             <tr>
                 <th scope="row">{{ loop.index }}</th>
-                <td>{{ item[0] }}</td>
+                <td>{{ item[0] | safe }}</td>
                 <td>
                     <ul>
                         {% for topping in item[1] %}
-                        <li style="margin-left:-20px;">{{ topping }}</li>
+                        <li style="margin-left:-20px;">{{ topping | safe }}</li>
                         {% endfor %}
                     </ul>
                 </td>
