--- a/templates/admin_user_accounts.html
+++ b/templates/admin_user_accounts.html
@@ -11,9 +11,9 @@
   <tbody>
     {% for user in userList %}
     <tr>
-      <th scope="row">{{user.id}}</th>
-      <td>{{user.username}}</td>
-      <td>{{user.email}}</td>
+      <th scope="row">{{ user.id }}</th>
+      <td>{{ user.username | safe }}</td>
+      <td>{{ user.email | safe }}</td>
     </tr>
     {% endfor %}
   </tbody>
