+ API4 Vulnerability fixed + Bug fixes

--- a/templates/product.html
+++ b/templates/product.html
@@ -41,7 +41,7 @@
                     <hr>
                     <h5> Quantity: </h5>
                     <div>
-                       <input class="form-control" name="quantity" type="number" step="1" min="1" value="1" required>
+                       <input class="form-control" name="quantity" type="number" step="1" min="1" max="10" value="1" required>
                     </div>
                     <hr>
                     {% if user_account %}
